# detinfer

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  run_determl.sh  run_detinfer.sh
determl/: __init__.py  benchmark.py  enforcer.py  engine.py  guardian.py  proof.py  utils.py  verifier.py  wrapper.py
detinfer/: __init__.py  check.py  cli.py
detinfer/agent/: __init__.py  replay.py  runtime.py  trace.py
detinfer/harness/: __init__.py  runner.py  task_schema.py
detinfer/inference/: canonicalizer.py  config.py  enforcer.py  engine.py  proof.py  verifier.py  wrapper.py
docs/: GUIDE.md  determinism-spec.md
examples/: basic_math.json  demo.py  explain_gravity.json  long_reasoning.json  multi_turn_math.json  python_function.json  tool_calculator.json
src/determl/: __init__.py  canonicalizer.py  cli.py  config.py  detector.py  utils.py
tests/: test_agent.py  test_canonicalizer.py  test_check.py  test_cli.py  test_config.py  test_detector.py  test_enforcer.py  test_engine.py  test_guardian.py  test_harness.py  test_proof.py  test_verifier.py  test_wrapper.py
