[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "determl"
version = "0.1.0"
description = "Detect, prevent, and verify non-determinism in ML inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
transformers = ["transformers>=4.30.0"]
dev = [
    "pytest>=7.0.0",
    "transformers>=4.30.0",
]

[tool.setuptools.packages.find]

[project.scripts]
determl = "determl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
