[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detinfer"
version = "0.2.1"
description = "detinfer (Deterministic Inference) — enforce, verify and prove determinism in ML inference across hardware"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["machine-learning", "determinism", "reproducibility", "pytorch", "llm", "inference", "verification"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/xailong-6969/detinfer"
Repository = "https://github.com/xailong-6969/detinfer"
Documentation = "https://github.com/xailong-6969/detinfer/blob/main/docs/determinism-spec.md"


[project.optional-dependencies]
transformers = ["transformers>=4.30.0"]
dev = [
    "pytest>=7.0.0",
    "transformers>=4.30.0",
]

[tool.setuptools.packages.find]

[project.scripts]
detinfer = "detinfer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
