[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detinfer"
version = "0.3.0"
description = "detinfer — deterministic runtime controls, session tracing, and replay verification for supported LLM workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["machine-learning", "determinism", "reproducibility", "pytorch", "llm", "inference", "verification"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/xailong-6969/detinfer"
Repository = "https://github.com/xailong-6969/detinfer"
Documentation = "https://github.com/xailong-6969/detinfer/blob/main/docs/determinism-spec.md"


[project.optional-dependencies]
transformers = ["transformers>=4.30.0"]
quantized = ["transformers>=4.30.0", "bitsandbytes>=0.41.0", "accelerate>=0.20.0"]
dev = [
    "pytest>=7.0.0",
    "transformers>=4.30.0",
]


[tool.setuptools.packages.find]
include = ["detinfer*"]
exclude = ["tests*"]


[project.scripts]
detinfer = "detinfer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

